--- a/src/main/java/twoProperties/view/TwoPropertiesView.fxml
+++ b/src/main/java/twoProperties/view/TwoPropertiesView.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="control.OneControler">
+<BorderPane xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="twoProperties.control.TwoPropertiesControl">
    <top>
       <Label text="Simple" BorderPane.alignment="CENTER" />
    </top>
