--- a/src/main/java/composition/MainView.fxml
+++ b/src/main/java/composition/MainView.fxml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -12,23 +9,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.MainControl">
+<AnchorPane xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="280.0" prefWidth="400.0">
-         <center>
-            <TableView prefHeight="200.0" prefWidth="200.0">
-              <columns>
-                  <TableColumn prefWidth="75.0" text="Compte" />
-                <TableColumn prefWidth="75.0" text="Nom" />
-                <TableColumn prefWidth="75.0" text="Prenom" />
-              </columns>
-            </TableView>
-         </center>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-      </BorderPane>
-      <BorderPane layoutX="414.0" layoutY="-24.0">
+      <BorderPane>
          <top>
             <Label text="Simple" BorderPane.alignment="CENTER" />
          </top>
@@ -50,9 +33,6 @@
                </children>
             </GridPane>
          </center>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
       </BorderPane>
    </children>
 </AnchorPane>
