--- a/src/main/java/twoProperties/view/TwoPropertiesView.fxml
+++ b/src/main/java/twoProperties/view/TwoPropertiesView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="twoProperties.control.TwoPropertiesControl">
+<fx:root type="BorderPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="twoProperties.control.ShapeControl">
    <top>
       <Label text="Simple" BorderPane.alignment="CENTER" />
    </top>
@@ -30,4 +30,4 @@
          </children>
       </GridPane>
    </center>
-</BorderPane>
+</fx:root>
